--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/chart.js": "^2.9.41",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-slick": "^0.23.13",
     "@types/styled-components": "^5.1.34"
