--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.9",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-slick": "^0.23.13",
     "@types/styled-components": "^5.1.34"
