--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.9",
     "js-cookie": "^3.0.5",
+    "password-scorer": "^1.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -24,7 +25,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,10 +53,11 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
     "@types/chart.js": "^2.9.41",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-slick": "^0.23.13",
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "@types/zxcvbn": "^4.4.5"
   }
 }
