--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-loader-spinner": "^4.0.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.9",
